--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,12 @@ main{
 h6{
     font-weight:normal;
 }
+
+#currentUV{
+    padding:2px;
+    margin:2px;
+    border-radius:5px;
+}
+.list-group-item:hover{
+    cursor: pointer;
+}
